# Devoir-dash-2026

./: README.md  app.py  main.py  pyproject.toml  test.ipynb  test.py
pages/: compare.py  markdown.py  page1.py
