[project]
name = "devoir-marc-ahanhanzoglele"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-bootstrap-templates>=2.1.0",
    "dash-labs>=1.2.0",
    "dcc>=0.8.0",
    "pandas>=3.0.1",
]
